<resources>
    <string name="admob_ad_unit_id">ca-app-pub-1913373193124965/9353062734</string>
    <string name="app_name">Comic Viewer Free</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_comic">DisplayComicActivity</string>
    <string name="dropbox">Dropbox</string>
    <string name="onedrive">Microsoft OneDrive</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_cloud_browser">CloudBrowserActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="dropbox_app_key">pz24rrsbb0dvzib</string>
    <string name="dropbox_app_secret">kpdixgm5szbiryj</string>
    <string name="onedrive_id">000000004C1508EF</string>
    <string name="onedrive_secret">ZRVOz8PE6ZEKNjYC1Q8b2v3Vl7pw0Jfa</string>
    <string name="db_scheme">db-pz24rrsbb0dvzib</string>
    <string name="file_provider_string">com.comicviewer.free.fileprovider</string>
    <string name="muzei_source">Comic Viewer</string>
    <string name="about_text">
        Special thanks to:\n\n
        Laura Welkenhuyzen - French translations\n
        Fabrizio - Italian translations\n
        Matteo - Spanish translations\n\n\n
        Hi! My name is Cédric Vandelaer and first of all thanks for checking out my app! I\'m a master student computer
        science at the university of Hasselt (Belgium) and I enjoy reading comics in my free time. I\'m also a big fan
        of android so I decided to make a comic viewer app in my free time. I wasn\'t really happy with existing apps because of
        their poor performance, overly complex interfaces or just because I didn\'t like how they looked. Well anyway, have fun reading
        comics with Comic Viewer!
    </string>
    <string name="updates">
        v2.5\n
        - New app icon\n
        - Translations for Spanish, Italian and French\n\n
        v2.4.1\n
        - Fixed a manifest error producing an installation error for some users\n\n
        v2.4\n
        - Image folder support\n
        - Dutch translations added\n
        - Fixed a bug that occurred when the app restarted after a long while\n
        - Added gold and indigo app themes (PRO)\n
        - Speed improvements\n\n
        v2.3.1\n
        - Fixed a crash for some users\n\n
        v2.3\n
        - Muzei support\n\n
        v2.2.1\n
        - Small bugfixes\n\n
        v2.2\n
        - Currently reading section\n
        - Microsoft OneDrive support\n
        - Hide comics and folders (PRO)\n
        - Turn pages with volume keys (PRO)\n
        - Reload comics\n
        - Bugfixes\n\n
        v2.1.3\n
        - Better cleanup of data files when they are no longer needed\n\n
        v2.1.2\n
        - Fixed a crash for some users\n\n
        v2.1.1\n
        - Added transition to the info page\n\n
        v2.1\n
        - Fixed manga mode\n
        - Rename folders\n\n
        v2.0\n
        - Dropbox support\n
        - Manga support\n
        - Option to choose the file format (Pro)\n
        - Option to keep the screen on\n
        - Option to rotate landscape pages in portrait mode\n
        - Better folder navigation\n\n
        v1.3.1\n
        - Open comics from other apps\n
        - Changed recents icon\n
        - Added support for more devices\n\n
        v1.3\n
        - Folder view\n
        - Increased loading speeds\n
        - Bugfixes\n\n
        v1.2\n
        - Landscape mode\n
        - Option to auto fit pages in landscape mode\n
        - Bugfixes\n
        - Navigation drawer image loading improvements\n
        - Ads now only show at the start and the end of a comic\n\n
        v1.1.1\n
        - Added the option to show page numbers for a short time on page change\n
        - Bugfixes\n\n
        v1.1\n
        - Added additional styling options for the pro version\n
        - Changed the app drawer image\n
        - Bugfixes\n\n
        v1.0.2\n
        - Fixed a bug where unrecognized files could not be deleted\n\n
        v1.0.1\n
        - Fixed bug with comics opening slow when loading\n\n
        v1\n
        - Initial release\n\n
    </string>
    <string name="eula">
        The product is protected by Federal Copyright Law. Material Comic Viewer retains the title to and ownership of the Product. You are licensed to use this Product on the following terms and conditions:
        \n\nLICENSE - The licensee is defined as the individual or company utilizing the Software Product. Material Comic Viewer hereby grants the licensee a license authorizing the licensee to use the enclosed product exclusively on devices in possession of the licensee. Use of this product by more than one individual or by anyone other than the licensee terminates, without notification, this license and the right to use this product.
        \n\nYOU MAY NOT: Distribute, rent, sub-license or otherwise make available to others the software or documentation or copies thereof, except as expressly permitted in this License without prior written consent from Cédric Vandelaer. In the case of an authorized transfer, the transferee must agree to be bound by the terms and conditions of this License Agreement.
        \n\nRESTRICTIONS: You may not remove any proprietary notices, labels, trademarks on the software or documentation.
        You may not modify, de-compile, disassemble, reverse engineer or translate the software.
        \n\nTERM – The term of this license will stay valid unless stated otherwise by Cédric Vandelaer. This license will also terminate automatically if you fail to comply with any term or condition in this Agreement.
        \n\nLIMITED WARRANTY - This software and documentation are sold "as is" without any warranty as to their performance, merchantability or fitness for any particular purpose. The licensee assumes the entire risk as to the quality and performance of the software. In no event shall Cédric Vandelaer or anyone else who has been involved in the creation, development, production, or delivery of this software be liable for any direct, incidental or consequential damages, such as, but not limited to, loss of anticipated profits, benefits, use, or data resulting from the use of this software, or arising out of any breach of warranty.
        \n\nCOPYRIGHT INFRINGEMENT - In no event shall Cédric Vandelaer or anyone else who has been involved in the creation, development, production, or delivery of this software be liable for any copyright infringements by the licensee or any other user of the software. The software does not provide any copyrighted materials and never will. Only the licensee can be held responsible for piracy or other violations regarding copyrights.
        \n\nNo comic are included in this app. You have to obtain them in a legal way and place them on your internal memory and/or sd card.
        \n\nAFFILIATIONS: This product is not affiliated with, nor authorized, endorsed or licensed in any way by Marvel, DC Comics, any other comic company, their affiliates or subsidiaries.
    </string>
    <string name="buy_full_version">Buy full version</string>
    <string name="unhide_files">Unhide files</string>
    <string name="unhide">Unhide</string>
    <string name="unhide_setting_non_pro">Unhide comics and folders (PRO)</string>
    <string name="unhide_setting">Unhide comics and folders</string>
    <string name="manga_setting_note">Note: By checking this option comics will open in manga modus by default</string>
    <string name="manga_setting_non_pro">Manga modus (PRO)</string>
    <string name="manga_setting">Manga modus</string>
    <string name="file_format_setting_non_pro">Comic file format (PRO)</string>
    <string name="file_format_setting">Comic file format</string>
    <string name="choose_file_format">Choose the file format</string>
    <string name="of">of</string>
    <string name="volume_key_setting_non_pro">Use volume keys to turn pages (PRO)</string>
    <string name="teal">Teal</string>
    <string name="indigo">Indigo</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="deep_purple">Deep purple</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="gold">Gold</string>
    <string name="remove_filepaths_setting">Remove added filepaths</string>
    <string name="remove_filepaths">Remove filepaths</string>
    <string name="download_file">Download file</string>
    <string name="download_folder">Download folder</string>
    <string name="download_request">Do you wish to download file</string>
    <string name="download_folder_request">Do you wish to download the following folder:</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="notice">Notice</string>
    <string name="pro_version_notice">This feature requires the pro version of the app.</string>
    <string name="go_to_play_store">Go to play store</string>
    <string name="no_supported_files_found">No supported files found…</string>
    <string name="mark_read">Mark read</string>
    <string name="manga_comic">Manga comic</string>
    <string name="options">Options</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="hide">Hide</string>
    <string name="info">Info</string>
    <string name="normal_comic">Normal comic</string>
    <string name="reload_comic">Reload comic</string>
    <string name="background_color_setting">Background color</string>
    <string name="card_appearance_setting">Card appearance</string>
    <string name="card_color_setting">Card color</string>
    <string name="scroll_animation_setting">Scroll animation</string>
    <string name="layout_settings_category_title">Layout settings</string>
    <string name="width_auto_fit_setting">Adjust page to screenwidth in landscape</string>
    <string name="rotate_landscape_pages_setting">Rotate landscape pages</string>
    <string name="volume_keys_setting">Use volume keys to turn pages</string>
    <string name="page_number_setting">Show page number</string>
    <string name="other_settings">Other settings</string>
    <string name="error">Error</string>
    <string name="already_exists">already exists</string>
    <string name="recents_screen_setting_note">Note: only works on lollipop devices</string>
    <string name="recents_screen_setting">Show comics in recents screen</string>
    <string name="screen_on_setting">Keep screen on when reading comics</string>
    <string name="reading_settings_category_setting">Reading options</string>
    <string name="scroll_animation_setting_note">Note: only for small and normal sized cards</string>
    <string name="mark_unread">Mark unread</string>
    <string name="total_comics_started">Total comics started:</string>
    <string name="total_comics_read">Total comics read:</string>
    <string name="finished_percentage">Comics finished percentage:</string>
    <string name="total_pages_read">Total pages read:</string>
    <string name="number_comics_added">Number of comics added:</string>
    <string name="most_read_series">Most read series:</string>
    <string name="longest_read_comic">Longest comic read:</string>
    <string name="number_pages">Number of pages:</string>
    <string name="reset_statistics">Reset statistics</string>
    <string name="backgroundcolor_setting1">Blue grey</string>
    <string name="card_color_setting_1">Muted colors</string>
    <string name="page_number_setting_1">Always</string>
    <string name="scroll_animation_setting_1">None</string>
    <string name="card_size_setting_2">Normal cards</string>
</resources>