<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomPreferenceCategory
        android:key="LayoutCategory"
        android:title="@string/layout_settings_category_title">
        <ListPreference
            android:key="backgroundColor"
            android:title="@string/background_color_setting"
            android:defaultValue="@string/backgroundcolor_setting1"
            android:entries="@array/Background_colors"
            android:entryValues="@array/Background_colors_values"
            />
        <ListPreference
            android:key="cardSize"
            android:title="@string/card_appearance_setting"
            android:defaultValue="@string/card_size_setting_2"
            android:entries="@array/Card_sizes"
            android:entryValues="@array/Card_sizes_values"/>
        <ListPreference
            android:key="cardColor"
            android:title="@string/card_color_setting"
            android:defaultValue="@string/card_color_setting_1"
            android:entries="@array/Card_colors"
            android:entryValues="@array/Card_colors_values"/>
        <ListPreference
            android:key="scrollAnimation"
            android:title="@string/scroll_animation_setting"
            android:summary="@string/scroll_animation_setting_note"
            android:defaultValue="@string/scroll_animation_setting_1"
            android:entries="@array/Scroll_animations"
            android:entryValues="@array/Scroll_animations_values"/>
        
    </com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomPreferenceCategory>

    <com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomPreferenceCategory
        android:key="ReadCategory"
        android:title="@string/reading_settings_category_setting">
        <com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomCheckBoxPreference
            android:key="widthAutoFit"
            android:title="@string/width_auto_fit_setting"
            android:defaultValue="true"/>
        <com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomCheckBoxPreference
            android:key="rotateLandscapePage"
            android:title="@string/rotate_landscape_pages_setting"
            android:defaultValue="false"/>
        <com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomCheckBoxPreference
            android:key="keepScreenOn"
            android:title="@string/screen_on_setting"
            android:defaultValue="true"/>
        <com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomCheckBoxPreference
            android:key="volumeKeysOption"
            android:title="@string/volume_keys_setting"
            android:defaultValue="false"/>
        <com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomCheckBoxPreference
            android:key="toolbarOption"
            android:title="@string/show_toolbar"
            android:defaultValue="false"/>
        <com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomCheckBoxPreference
            android:key="forcePortrait"
            android:title="@string/force_portrait_setting"
            android:defaultValue="false"/>
        <ListPreference
            android:key="readingBackgroundColor"
            android:title="@string/reading_background_color_setting"
            android:defaultValue="@string/black"
            android:entries="@array/Reading_background_options"
            android:entryValues="@array/Reading_background_options"/>
        <ListPreference
            android:key="pageNumberSetting"
            android:title="@string/page_number_setting"
            android:defaultValue="@string/page_number_setting_1"
            android:entries="@array/Page_number_settings"
            android:entryValues="@array/Page_number_settings"/>

    </com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomPreferenceCategory>

    <com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomPreferenceCategory
        android:key="FunctionalityCategory"
        android:title="@string/other_settings">

        <com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomCheckBoxPreference
            android:key="useRecents"
            android:title="@string/recents_screen_setting"
            android:summary="@string/recents_screen_setting_note"
            android:defaultValue="true"/>
        
    </com.comicviewer.cedric.comicviewer.PreferenceFiles.CustomPreferenceCategory>


</PreferenceScreen>