<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.comicviewer.cedric.comicviewer.StatisticsFragment">

    <ScrollView
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp">
                <TextView
                    android:id="@+id/total_comics_started_title_textview"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_comics_started" />
                <TextView
                    android:id="@+id/total_comics_started_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp">
                <TextView
                    android:id="@+id/total_comics_read_title_textview"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_comics_read" />
                <TextView
                    android:id="@+id/total_comics_read_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />
            </RelativeLayout>
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">
                <TextView
                    android:id="@+id/finished_comics_percentage_title_textview"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finished_percentage" />
                <TextView
                    android:id="@+id/finished_comics_percentage_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100%" />
            </RelativeLayout>
            <com.gc.materialdesign.views.ProgressBarDeterminate
                android:id="@+id/progress_bar"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="24dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#1E88E5"
                materialdesign:max="100"
                materialdesign:min="0"/>
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">
                <TextView
                    android:id="@+id/pages_read_title_textview"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_pages_read" />
                <TextView
                    android:id="@+id/pages_read_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />
            </RelativeLayout>
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp">
                <TextView
                    android:id="@+id/added_comics_title_textview"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_comics_added" />
                <TextView
                    android:id="@+id/added_comics_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />
            </RelativeLayout>
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">
                <TextView
                    android:id="@+id/favorite_series_title_textview"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/most_read_series" />
                <TextView
                    android:id="@+id/favorite_series_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Captain America" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp">
                <TextView
                    android:id="@+id/longest_read_title_title_textview"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longest_read_comic" />
                <TextView
                    android:id="@+id/longest_read_title_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Iron Man 12" />
            </RelativeLayout>
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp">
                <TextView
                    android:id="@+id/longest_number_pages_title_textview"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_pages" />
                <TextView
                    android:id="@+id/longest_number_pages_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="23" />
            </RelativeLayout>

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/reset_statistics_button"
                android:layout_marginTop="20dp"
                android:padding="2dp"
                android:background="@color/Teal"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:text="@string/reset_statistics"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>


</FrameLayout>
