<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/bottom_wrapper"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_height="match_parent">
    <!--What you want to show-->
    <LinearLayout
        android:id="@+id/mark_read_layout"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="match_parent">
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/mark_read_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_check"
            android:adjustViewBounds="true"
            android:layout_margin="6dp"
            app:fab_showShadow="true"
            app:fab_shadowColor="#66000000"
            app:fab_shadowRadius="4dp"
            app:fab_shadowXOffset="1dp"
            app:fab_shadowYOffset="3dp"
            app:fab_size="mini"
            app:fab_colorNormal="@color/Teal"
            app:fab_colorPressed="@color/TealDark"
            app:fab_colorRipple="@color/TealLight" />
        <TextView
            android:gravity="center"
            android:id="@+id/mark_read_text"
            android:text="@string/mark_read"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/manga_layout"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="match_parent">
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/manga_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_fish"
            android:adjustViewBounds="true"
            android:layout_margin="6dp"
            app:fab_showShadow="true"
            app:fab_shadowColor="#66000000"
            app:fab_shadowRadius="4dp"
            app:fab_shadowXOffset="1dp"
            app:fab_shadowYOffset="3dp"
            app:fab_size="mini"
            app:fab_colorNormal="@color/Orange"
            app:fab_colorPressed="@color/OrangeDark"
            app:fab_colorRipple="@color/OrangeLight" />
        <TextView
            android:gravity="center"
            android:id="@+id/manga_text"
            android:text="@string/manga_comic"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/more_layout"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="match_parent">
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_dots_horizontal"
            android:adjustViewBounds="true"
            android:layout_margin="6dp"
            app:fab_showShadow="true"
            app:fab_shadowColor="#66000000"
            app:fab_shadowRadius="4dp"
            app:fab_shadowXOffset="1dp"
            app:fab_shadowYOffset="3dp"
            app:fab_size="mini"
            app:fab_colorNormal="@color/Purple"
            app:fab_colorPressed="@color/PurpleDark"
            app:fab_colorRipple="@color/PurpleLight" />
        <TextView
            android:gravity="center"
            android:id="@+id/more_text"
            android:textSize="12sp"
            android:text="@string/options"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>